test/files/neg/macro-invalidsig-params-badtype.check
Impls_Macros_1.scala:8: error: macro implementation has wrong shape:
 required: (c: scala.reflect.macros.Context)(x: c.Expr[Int]): c.Expr[Any]
 found   : (c: scala.reflect.macros.Context)(x: Int): Nothing
type mismatch for parameter x: c.Expr[Int] does not conform to Int
  def foo(x: Int) = macro Impls.foo
      ^
one error found
